--- a/NewScreen.kv
+++ b/NewScreen.kv
@@ -21,10 +21,16 @@
         on_press: root.animateButton()
 
     Label:
-        id: JoystickPosition
-
+        id: PositionJoystick
+        text: "0"
         x: root.width * -0.45
         y: root.width * -0.05
         color: 1, 0.5, 0, 1
-        text: root.joystick.get_axis(0)
+#        on_active: xPositionJoystick.text = root.refresh()
+#        if axis == 'x': xPositionJoystick.text = return self.joystick.get_axis(0)
+#        on_active: xPositionJoystick.text = root.updateJoystick('x')
+
+
+
+
 
