Animated Button Works now

--- a/NewScreen.kv
+++ b/NewScreen.kv
@@ -20,12 +20,19 @@
         y: root.width * 0
         on_press: root.animateButton()
 
-    Label:
-        id: PositionJoystick
-        text: "0"
-        x: root.width * -0.45
-        y: root.width * -0.05
-        color: 1, 0.5, 0, 1
+#    Label:
+#        id: PositionJoystick
+#        text: "0"
+#        x: (root.width / 2) + (root.width / 2)
+#        y: (root.height / 2) + (root.height / 2)
+#        color: 1, 0.5, 0, 1
+
+
+
+
+
+
+
 #        on_active: xPositionJoystick.text = root.refresh()
 #        if axis == 'x': xPositionJoystick.text = return self.joystick.get_axis(0)
 #        on_active: xPositionJoystick.text = root.updateJoystick('x')
