--- a/main.kv
+++ b/main.kv
@@ -1,5 +1,6 @@
 <MainScreen>:
     name: 'main'
+    on_enter:root.start_joy_thread()
     FloatLayout:
         size_hint: None, None
 
@@ -78,11 +79,11 @@
         Slider:
             id: slider
             size: 400, 30
-#            size_hint: 0.2, 0.2
+            size_hint: 0.4, .2
             min: 0
             max: 100
-            x: root.width * 0.06
-            y: root.width * 0.1
+            x: root.width * 0.4
+            y: root.width * 0.3
             step: 1
             orientation: 'horizontal'
 
@@ -101,3 +102,14 @@
         y: root.width * 0.2
 
         on_press: root.goToNewScreen()
+
+
+    Label:
+        id: PositionJoystick
+        text:
+        font_size: 50
+        x: (root.width / 3)
+        y: (root.height / 3)
+        color: 1, 0.5, 0, 1
+
+
