Successfully: Created UI for Motor On/Off Button!       Created UI for clockwise/counterclockwise Button!

--- a/main.kv
+++ b/main.kv
@@ -96,7 +96,7 @@
 
     DPEAButton:
         id: newScreenButton
-        text: "Go To New Screen"
+        text: "Pratik"
         size: 100, 100
         x: root.width * 0.4
         y: root.width * 0.2
