--- a/main.kv
+++ b/main.kv
@@ -87,6 +87,7 @@
             step: 1
             orientation: 'horizontal'
 
+
         Label:
             text: str(slider.value)
             x: root.width * 0.06
@@ -111,6 +112,14 @@
         x: (root.width / 3)
         y: (root.height / 3)
         color: 1, 0.5, 0, 1
+
+#    DPEAButton
+#        id: exitProgramButton
+#        text: hi
+#        size:100, 100
+#        x: root.width * 0.5
+#        y: root.width * 0.5
+#        on_press: root.exit_program()
 
 
 
